--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -52,18 +52,6 @@ jobs:
     runs-on: ubuntu-latest
     if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize') && github.repository == 'moderntribe/square-one'
     steps:
-      # - name: Set Variables
-      #   run: |
-      #     echo "REVIEW_APP=${{ env.APPNAME }}-pr${{ github.event.pull_request.number }}" >> $GITHUB_ENV
-      #     echo "GHA_URL=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_ENV
-
-      # - name: Extract PR branch name
-      #   shell: bash
-      #   run: echo "##[set-output name=branch;]$(echo ${BASE_BRANCH#refs/heads/})"
-      #   env:
-      #     BASE_BRANCH: ${{ github.event.pull_request.head.ref }}
-      #   id: extract_pr
-
       - name: Cloning repo for Pull Requests
         uses: actions/checkout@v2
         with:
@@ -83,6 +71,17 @@ jobs:
         uses: ./.github/actions/utils/common-variables
         with:
           base_branch: "${{ github.event.pull_request.head.ref }}"
+
+      - name: Create review app
+        uses: ./.github/actions/dokku/create-review-app
+        with:
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          server: "dokku@${{ env.SERVER }}"
+          team_server: ${{ env.TEAM_SERVER }}
+          app: ${{ env.APPNAME }}
+          review_app: ${{ env.REVIEW_APP }}
+          github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
+          gha_url: ${{ env.GHA_URL }}
 
       # - name: Build Node
       #   uses: ./.github/actions/square1/build-node
@@ -124,55 +123,6 @@ jobs:
           server_url: "${{ env.REVIEW_APP }}.${{ env.SERVER }}"
           gha_url: "${{ env.GHA_URL }}"
           color: "bad"
-
-
-      # - name: SUCCESS
-      #   if: success()
-      #   uses: tokorom/action-slack-incoming-webhook@main
-      #   env:
-      #     INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-      #   with:
-      #     text: ":green_check: Successful on Review App Deployment"
-      #     attachments: |
-      #       [
-      #         {
-      #           "color": "good",
-      #           "fields": [
-      #             {
-      #               "title": "Test Review App URL",
-      #               "value": "${{ env.REVIEW_APP }}.${{ env.SERVER }}"
-      #             },
-      #             {
-      #               "title": "GitHub Actions URL",
-      #               "value": "${{ env.GHA_URL }}"
-      #             }
-      #           ]
-      #         }
-      #       ]
-
-      # - name: FAILURE
-      #   if: failure()
-      #   uses: tokorom/action-slack-incoming-webhook@main
-      #   env:
-      #     INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-      #   with:
-      #     text: ":x: Failed on Review App Deployment"
-      #     attachments: |
-      #       [
-      #         {
-      #           "color": "bad",
-      #           "fields": [
-      #             {
-      #               "title": "Test Review App URL",
-      #               "value": "${{ env.REVIEW_APP }}.${{ env.SERVER }}"
-      #             },
-      #             {
-      #               "title": "GitHub Actions URL",
-      #               "value": "${{ env.GHA_URL }}"
-      #             }
-      #           ]
-      #         }
-      #       ]
 
   destroy_review_app:
     runs-on: ubuntu-latest
