--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   APPNAME: sq1
-  SERVER: ${{ secrets.TEST_DOMAIN }}
-  TEAM_SERVER: dokku01
+  SERVER: dokku01
+  SERVER_URL: ${{ secrets.TEST_DOMAIN }}
 
 jobs:
   deploy_review_app:
@@ -20,14 +20,14 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Cloning Actions
+      - name: Cloning Actions Repos
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           repository: moderntribe/actions
           token: ${{ secrets.GH_BOT_TOKEN }}
-          path: ".github/actions"
-          ref: "add_basic_sq1"
+          path: .github/actions
+          ref: add_basic_sq1
 
       - name: Set common variables
         uses: ./.github/actions/utils/common-variables
@@ -37,11 +37,11 @@ jobs:
       - name: Create review app ${{ env.REVIEW_APP }}
         uses: ./.github/actions/dokku/create-review-app
         with:
+          app_name: ${{ env.APPNAME }}
+          review_app_name: ${{ env.REVIEW_APP }}
+          server: ${{ env.SERVER }}
+          server_url: ${{ env.SERVER_URL }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          server: "dokku@${{ env.SERVER }}"
-          team_server: ${{ env.TEAM_SERVER }}
-          app: ${{ env.APPNAME }}
-          review_app: ${{ env.REVIEW_APP }}
           github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
           gha_url: ${{ env.GHA_URL }}
 
@@ -57,7 +57,7 @@ jobs:
         uses: ./.github/actions/deploy/gitdeploy
         with:
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          server: "dokku@${{ env.SERVER }}"
+          server: "dokku@${{ env.SERVER_URL }}"
           app: ${{ env.REVIEW_APP }}
           branch: ${{ env.BRANCH }}
 
@@ -67,7 +67,7 @@ jobs:
         with:
           webhook_url: ${{ secrets.SLACK_WEBHOOK }}
           message: ":green_check: Successful on Review App Deployment"
-          server_url: "${{ env.REVIEW_APP }}.${{ env.SERVER }}"
+          app_url: "${{ env.REVIEW_APP }}.${{ env.SERVER_URL }}"
           gha_url: ${{ env.GHA_URL }}
           color: "good"
 
@@ -77,7 +77,7 @@ jobs:
         with:
           webhook_url: ${{ secrets.SLACK_WEBHOOK }}
           message: ":x: Failed on Review App Deployment"
-          server_url: "${{ env.REVIEW_APP }}.${{ env.SERVER }}"
+          app_url: "${{ env.REVIEW_APP }}.${{ env.SERVER_URL }}"
           gha_url: ${{ env.GHA_URL }}
           color: "bad"
 
@@ -87,14 +87,14 @@ jobs:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.repository == 'moderntribe/square-one'
     steps:
 
-      - name: Cloning Actions
+      - name: Cloning Actions Repos
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           repository: moderntribe/actions
           token: ${{ secrets.GH_BOT_TOKEN }}
-          path: ".github/actions"
-          ref: "add_basic_sq1"
+          path: .github/actions
+          ref: add_basic_sq1
 
       - name: Set common variables
         uses: ./.github/actions/utils/common-variables
@@ -102,11 +102,9 @@ jobs:
       - name: Delete review app ${{ env.REVIEW_APP }}
         uses: ./.github/actions/dokku/delete-review-app
         with:
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          server: "dokku@${{ env.SERVER }}"
-          team_server: ${{ env.TEAM_SERVER }}
-          app: ${{ env.APPNAME }}
-          review_app: ${{ env.REVIEW_APP }}
+          app_name: ${{ env.APPNAME }}
+          review_app_name: ${{ env.REVIEW_APP }}
+          server: ${{ env.SERVER }}
           github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
           gha_url: ${{ env.GHA_URL }}
 
@@ -116,6 +114,6 @@ jobs:
         with:
           webhook_url: ${{ secrets.SLACK_WEBHOOK }}
           message: ":x: Failed to Destroy App"
-          server_url: "${{ env.REVIEW_APP }}.${{ env.SERVER }}"
+          app_url: "${{ env.REVIEW_APP }}.${{ env.SERVER_URL }}"
           gha_url: ${{ env.GHA_URL }}
           color: "bad"
