--- a/package.json
+++ b/package.json
@@ -105,13 +105,7 @@
     "swiper": "^6.7.5",
     "verge": "^1.10.2",
     "voca": "^1.4.0",
-    "whatwg-fetch": "^3.0.0",
-    "workbox-cacheable-response": "^5.0.0",
-    "workbox-core": "^5.0.0",
-    "workbox-expiration": "^5.0.0",
-    "workbox-routing": "^5.0.0",
-    "workbox-strategies": "^5.0.0",
-    "workbox-window": "^5.0.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.5",
