--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "classnames": "^2.2.6",
     "delegate": "^3.2.0",
     "es6-promise": "^4.2.8",
+    "gulp-eslint": "^6.0.0",
     "idx": "^2.4.0",
+    "intersection-observer": "^0.12.0",
     "jquery": "3.6.0",
     "lazysizes": "^5.2.0",
     "lodash": "^4.17.15",
@@ -152,7 +154,6 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-decompress": "^3.0.0",
-    "gulp-eslint": "^6.0.0",
     "gulp-footer": "^2.0.2",
     "gulp-header": "^2.0.7",
     "gulp-if": "^3.0.0",
