--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -22,7 +22,8 @@ jobs:
         id: nvm
         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
 
-      - uses: actions/setup-node@v2
+      - name: Set up node
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
 
