--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -10,12 +10,11 @@ env:
 
 jobs:
   create_review_app:
+    if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize')
     uses: moderntribe/square-one/.github/workflows/reusable-create.yml@add_deploy_folder
     with:
-      app_name: ${{ env.APPNAME }}
-      review_app_name: ${{ env.REVIEW_APP }}
-      server: ${{ env.SERVER }}
-      gha_url: ${{ env.GHA_URL }}
+      app_name: "${{ env.APPNAME }}"
+      server: "${{ env.SERVER }}"
     secrets:
       github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
 
