--- a/.github/workflows/deploy-review-app.yml
+++ b/.github/workflows/deploy-review-app.yml
@@ -13,10 +13,12 @@ jobs:
     if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize')
     uses: moderntribe/square-one/.github/workflows/reusable-create.yml@add_deploy_folder
     with:
+      # workflows don't support env
       app_name: sq1
       server: ${{ secrets.TEST_DOMAIN }}
     secrets:
-      github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
+      github_pat_token: ${{ secrets.TEST_DOMAIN }}
+      # github_pat_token: ${{ secrets.GH_BOT_TOKEN }}
 
     # runs-on: ubuntu-latest
     # if: (github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'synchronize')
